results/SVCOMP/4-shot/log-fcmpx_dcmpx1-2024_03_18_23_20_45.txt
class Main {
  //@ requires Float.MIN_VALUE <= f && f <= Float.MAX_VALUE;
  //@ requires Double.MIN_VALUE <= d && d <= Double.MAX_VALUE;
  //@ ensures f == 2.5f;
  //@ ensures f < 3.0f;
  //@ ensures f > 2.0f;
  //@ ensures d == 2.5;
  //@ ensures d < 3.0;
  //@ ensures d > 2.0;
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:2: error: cannot find symbol
  //@ requires Float.MIN_VALUE <= f && f <= Float.MAX_VALUE;
                                  ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:2: error: cannot find symbol
  //@ requires Float.MIN_VALUE <= f && f <= Float.MAX_VALUE;
                                       ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: cannot find symbol
  //@ requires Double.MIN_VALUE <= d && d <= Double.MAX_VALUE;
                                   ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:3: error: cannot find symbol
  //@ requires Double.MIN_VALUE <= d && d <= Double.MAX_VALUE;
                                        ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:4: error: cannot find symbol
  //@ ensures f == 2.5f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:5: error: cannot find symbol
  //@ ensures f < 3.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:6: error: cannot find symbol
  //@ ensures f > 2.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:7: error: cannot find symbol
  //@ ensures d == 2.5;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:8: error: cannot find symbol
  //@ ensures d < 3.0;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:9: error: cannot find symbol
  //@ ensures d > 2.0;
              ^
  symbol:   variable d
  location: class Main
10 errors

